--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "main": "server.js",
   "dependencies" : {
     "express" : "latest",           
-    "mongoose" : "latest",          
+    "mongoose" : "latest",
+    "mongoose": "latest",
+    "mongoose-thumbnail": "latest",
+    "mongoose-file": "latest",  
+    "imagemin" : "latest",      
     "ejs":"latest",
-    "multer":"latest"
+    "multer":"latest",
+    "aws-sdk" : "latest"
   }
 }
