removed unused dependecies. Trying to solve 16mb problem of mongo

--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "dependencies" : {
     "express" : "latest",           
     "mongoose" : "latest",
-    "mongoose": "latest",
-    "mongoose-thumbnail": "latest",
-    "mongoose-file": "latest",  
     "imagemin" : "latest",      
-    "ejs":"latest",
-    "multer":"latest",
-    "aws-sdk" : "latest"
+    "ejs" : "latest",
+    "multer": "latest",
+    "mongoose-fs" : "latest",
+    "gridfs-stream" : "latest"
   }
 }
