export, get by id, get by distance to a point, added description to the model

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "multer": "latest",
     "mongoose-fs" : "latest",
     "gridfs-stream" : "latest",
-    "streamifier" : "latest"
+    "streamifier" : "latest",
+    "lodash" : "latest"
   }
 }
